<resources>
    <string name="app_name">Space Bugs! (1.1)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterUsername">Username</string>
    <string name="enterPassword">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submitButton">Submit</string>
    <string name="titleUserReg">User Registration</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="startButton">Start Game!</string>
    <string name="screen_width">"Screen Width: "</string>
    <string name="screen_height">"Screen Height: "</string>
    <string name="fps">"FPS: "</string>
    <string name="ship_x">"Ship X Cord: "</string>
    <string name="ship_y">"Ship Y Cord: "</string>
    <string name="bullet_location">Bullet (X, Y) Cord\'s: (</string>
    <string name="head_x">"Head X Coord: "</string>
    <string name="head_y">"Head Y Coord: "</string>
    <string name="timer">"Timer: "</string>
    <string name="block_size">"Block Size: "</string>
    <string name="score">"SCORE: "</string>
    <string name="segments">"Centipede Segments: "</string>
    <string name="game_over">GAME OVER</string>
    <string name="press_back">Press Back To Try Again</string>
    <string name="comma">", "</string>
    <string name="para">)</string>
    <string name="high_scores">High Scores</string>
    <string name="scores_list">scores</string>
    <string name="scores_preference">scores_preference</string>
    <string name="main_menu">Main Menu</string>
    <string name="game_over_text">Game Over!</string>
    <string name="score_text">score</string>
    <string-array name="music_list">
        <item>Cool Drums</item>
        <item>Hip Beats</item>
        <item>Ambient Piano</item>
    </string-array>
</resources>
