<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/space"
    tools:context="group7.tcss450.uw.edu.centipedeandroid.authentication.LoginFragment"
    android:weightSum="1"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/title"
        android:layout_weight="0.02" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/userText"
        android:maxLines="1"
        android:textColorHint="#FFFFFF"
        android:hint="@string/enterUsername"/>
    <EditText
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passText"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:hint="@string/enterPassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/registerButton"
            android:id="@+id/registerButton"/>

        <Button
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/submitButton"
            android:id="@+id/submitButton"/>


    </RelativeLayout>


</LinearLayout>
