<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context="group7.tcss450.uw.edu.centipedeandroid.menu.GameOverFragment">

    <Button
        style="@android:style/Widget.Holo.Button"
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/mainMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="199dp"/>
    <TextView
        android:textColor="#FFFFFF"
        android:text="@string/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:id="@+id/gameOver"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:textColor="#FFFFFF"
        android:text="@string/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:id="@+id/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_above="@+id/mainMenu"
        android:layout_alignLeft="@+id/gameOver"
        android:layout_alignStart="@+id/gameOver" />

</RelativeLayout>
